kubernetes/infrastructure/cilium/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  parentRefs:
    - kind: Gateway
      name: cilium-gateway
      namespace: kube-system
      sectionName: cilium-ui-tls-gw
  hostnames:
    - hubble.home.svc
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
